# plays_with_temporal

./: .bandit  .gitignore  .pre-commit-config.yaml  Makefile  README  README-google-setup.md  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-demo.txt  requirements.txt
.github/workflows/: e2e-tests.yml  quality-check.yml  security-check.yml  type-check.yml
cal/: Dockerfile.worker  __init__.py  activities.py  domain.py  fixme.org  org.py  repositories.py  usecase.py  worker.py  workflows.py
cal/cli/: __init__.py  google_calendar.py  mock_calendar.py  sync_calendar.py  sync_daemon.py
cal/repos/: __init__.py
cal/templates/: schedule.org.j2
cal/tests/: conftest.py  factories.py  test_cli.py  test_domain_properties.py  test_helpers.py  test_org.py  test_repository_contracts.py  test_usecase.py  test_usecase_security.py  test_workflows.py
docs/: Dockerfile  docker-compose.yml
docs/img/: clean-architecture-dependencies.puml  domain-dependencies.puml  usecase-dependencies.puml  (+1 more)
fun-police/: GLOSSARY.org  activity-naming-analysis.org  formatting.org  framework-philosophy.org  instructions.org  methodology.org  mvp.org  productContext.org  projectbrief.org  systemPatterns.org  tasks.org  techContext.org
julee_example/: Dockerfile.api  README.md  knowledge_services_fixture.yaml  worker.py
sample/: Dockerfile.api  Dockerfile.worker  GUIDE.md  __init__.py  docker-compose.test.yml  domain.py  fixme.org  repositories.py  requirements.txt  todo.org  usecase.py  validation.py  worker.py  workflow.py
util/: domain.py
(+367 files in other folders)
